--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: teste_az
     ports:
-      - "5173:5173"
+      - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
@@ -20,24 +20,24 @@ services:
       timeout: 5s
 
 
-  api:
-    image: openjdk:17
-    container_name: spring_boot_app
-    working_dir: /api
-    volumes:
-      - ./api:/api
-    command: "./mvnw spring-boot:run"
-    ports:
-      - "8080:8080"
-    healthcheck:
-      test: "curl --fail localhost:8081/actuator/health | grep UP || exit 1"
-      interval: 20s
-      timeout: 5s
-      retries: 5
-      start_period: 40s
-    depends_on:
-      db:
-        condition: service_healthy
+  # api:
+  #   image: openjdk:17
+  #   container_name: spring_boot_app
+  #   working_dir: /api
+  #   volumes:
+  #     - ./api:/api
+  #   command: "./mvnw spring-boot:run"
+  #   ports:
+  #     - "8081:8080"
+  #   healthcheck:
+  #     test: "curl --fail localhost:8080/actuator/health | grep UP || exit 1"
+  #     interval: 20s
+  #     timeout: 5s
+  #     retries: 5
+  #     start_period: 40s
+  #   depends_on:
+  #     db:
+  #       condition: service_healthy
 
   app:
     image: node:20
@@ -47,12 +47,13 @@ services:
       - ./app:/app
     command: "npm run dev"
     ports:
-      - "8081:8080"
+      - "5173:5173"
     depends_on:
-      api:
+      db:
         condition: service_healthy
 
 volumes:
   postgres_data:
 
 # Define healthcheck for db service
+
